# ScreenCut

./: .gitignore  CMakeLists.txt  Makefile  README.md  requirements.txt  run_hidden.vbs
platform/macos/: Info.plist  ScreenCut.entitlements  deploy_mac.cmake  patch_rpath.py
src/: capture_main.py  config.cpp  config.h  config.py  main.cpp  screencut.py  version.h  version.py
src/capture/: capture_overlay.py  capture_permissions.cpp  capture_permissions.h  capture_preferences.cpp  capture_preferences.h  capture_prefs_ui.py  capture_status.py  capture_window.cpp  capture_window.h
src/core/: capture_codecs.py  capture_engine.cpp  capture_engine.h  capture_video.py  common_project.h  image_capture.py  scroll_capture.py  video_capture.py
src/editor/: editor_main.cpp  editor_main.py  editor_models.cpp  editor_models.h  editor_window.cpp  editor_window.h
src/platform/: platform.h  platform_mac.cpp  platform_win.cpp
src/resources/: IconUtils.cpp  IconUtils.h  icon_utils.py  resources.qrc
src/ui/: countdown.py  cursor_settings.py  cursor_settings_ui.py  hotkey_label.py  icon_utils.py  image_editor.py  image_editor_ui.py  main.py  main_ui.py  main_window.py  overlay.py  overlay_ui.py  overlay_window.py  preferences.py  preferences_ui.py  preferences_window.py  ready_to_record_panel.py  rec_status.py  toolbar.py
src/widgets/: capture_buttons.py  capture_countdown.cpp  capture_countdown.h  capture_pin.cpp  capture_pin.h  capture_scroll.cpp  capture_scroll.h  capture_status.cpp  capture_status.h  capture_toolbar.cpp  capture_toolbar.h  capture_toolbar.py  common_notification.cpp  common_notification.h  common_notification.py  common_pin.cpp  common_pin.h  common_switch.cpp  common_switch.h  main_tabs.py
